--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,10 +27,10 @@ jobs:
             aws-region: ap-south-1
 
       - name: Terraform Format Check
-        run: cd terraform/ && terraform fmt -check
+        run: cd terraform && terraform fmt -check
 
       - name: Terraform Validate
-        run: cd terraform/ && terraform validate
+        run: cd terraform && terraform validate
 
       - name: Terraform Init
         run: cd terraform/ && terraform init
