--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,16 +27,16 @@ jobs:
             aws-region: ap-south-1
 
       - name: Terraform Format Check
-        run: cd terraform && terraform fmt -check
+        run: terraform fmt -check
 
       - name: Terraform Validate
-        run: cd terraform && terraform validate
+        run: terraform validate
 
       - name: Terraform Init
-        run: cd terraform/ && terraform init
+        run: terraform init
 
       - name: Terraform Plan
-        run: cd terraform/ && terraform plan
+        run: terraform plan
 
       - name: Terraform Apply
-        run: cd terraform/ && terraform apply -auto-approve
+        run: terraform apply -auto-approve
